--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,11 +25,11 @@
     "extends": [
       "react-app",
       "react-app/jest",
-	  "prettier"
+      "prettier"
     ],
-	"plugins": [
-		"prettier"
-	]
+    "plugins": [
+      "prettier"
+    ]
   },
   "browserslist": {
     "production": [
