--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "^3.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
